--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,9 @@ body {
   color: white;
   font-family: "poppins";
 }
+::-webkit-scrollbar {
+  display: none;
+}
+::-webkit-scrollbar {
+  display: none;
+}
